--- a/checklist_app/pubspec.yaml
+++ b/checklist_app/pubspec.yaml
@@ -13,14 +13,15 @@ dependencies:
     sdk: flutter
   connectivity_plus: ^2.3.6+1
   cupertino_icons: ^1.0.2
+  dartz: ^0.10.1
   dio: ^4.0.6
   get_it: ^7.2.0
   google_fonts: ^3.0.1
   go_router: ^4.3.0
-  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   iconsax: ^0.0.8
   overlay_support: ^2.0.1
-  flutter_riverpod: ^2.0.0-dev.9
+  provider: ^6.0.3
   uuid: ^3.0.6
 
 dev_dependencies:
