--- a/checklist_app/pubspec.yaml
+++ b/checklist_app/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
   dio: ^4.0.6
+  flutter_staggered_grid_view: ^0.6.2
   get_it: ^7.2.0
   google_fonts: ^3.0.1
   go_router: ^4.3.0
