--- a/checklist_app/pubspec.yaml
+++ b/checklist_app/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  integration_test:
+    sdk: flutter
 
   flutter_lints: ^2.0.0
   mocktail: ^0.3.0
