--- a/checklist_app/pubspec.yaml
+++ b/checklist_app/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   uuid: ^3.0.6
 
 dev_dependencies:
+  device_preview: ^1.1.0
   flutter_test:
     sdk: flutter
   integration_test:
