--- a/checklist_app/android/app/src/main/AndroidManifest.xml
+++ b/checklist_app/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
    <application
-        android:label="checklist_app"
+        android:label="Checklist"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
