--- a/checklist_app/android/app/build.gradle
+++ b/checklist_app/android/app/build.gradle
@@ -49,7 +49,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.example.checklist_app"
+        applicationId "ifeanyi.checklist.android"
         minSdkVersion flutter.minSdkVersion
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
