--- a/checklist_app/android/app/src/main/AndroidManifest.xml
+++ b/checklist_app/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.checklist_app">
+    package="ifeanyi.checklist.android">
 
     <uses-permission android:name="android.permission.INTERNET" />
    <application
