--- a/checklist_app/macos/Runner/Configs/AppInfo.xcconfig
+++ b/checklist_app/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = checklist_app
+PRODUCT_NAME = Checklist
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.checklistApp
+PRODUCT_BUNDLE_IDENTIFIER = ifeanyi.checklist.ios
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2022 com.example. All rights reserved.
